# rocket-microservice-template

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/config/: mod.rs  rocket.rs  stats.rs  status.rs
src/config/integration_tests/: status.rs
src/infrastructure/: health.rs  mod.rs
src/my_domain/: api.rs  config.rs  facade.rs  mod.rs
src/my_domain/integration_tests/: mod.rs
src/stats/: mod.rs  tests.rs
