[package]
name = "rocket-microservice-template"
version = "0.1.0"
authors = ["Adrian Kosiński <segodj112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
prometheus = { version = "0.12", feature = ["process"] }
serde = "1.0"
serde_json = "1.0"
flurry = "0.3.1"

assertx = "1.1.6"